<resources>
    <string name="app_name">Piano Tiles</string>
    <string name="piano_tiles_blyat">PIANO TILES BLYAT !!!</string>
    <string name="play">PLAY</string>
    <string name="score">SCORE </string>
    <string name="_0">0</string>
    <string name="_3000">3000</string>
    <string name="game_over_blyat">GAME OVER BLYAT !!</string>
    <string name="play_again">PLAY AGAIN</string>
    <string name="high_score">HI-SCORE </string>
    <string name="start">START</string>
    <string name="settings">Settings</string>
    <string name="piano_tiles">PIANO TILES</string>
    <string name="game_over">GAME OVER</string>
    <string name="no_name">No Name</string>
    <string name="no_score">No Score</string>
    <string name="test">Test</string>
    <string name="back_to_main_menu">BACK TO MAIN MENU</string>
    <string name="dark_theme">DARK THEME</string>
    <string name="select_music">SELECT MUSIC</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="hs_text_1">You made it into the leaderboard!</string>
    <string name="hs_text_2">Enter your name below:</string>
    <string name="exit">Exit</string>
    <string name="megaman_cut_stage">Megaman - CUT STAGE</string>
    <string name="congratulations">Congratulations!</string>
    <string name="submit">Submit Score!</string>
    <string name="change_theme">CHANGE THEME</string>
    <string name="delete_leaderboard">DELETE LEADERBOARD</string>
    <string name="delete">Delete</string>
    <string name="tetris_music_01">Tetris - Music 01</string>
    <string name="change">CHANGE</string>
</resources>