<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".view.MainActivity"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/piano_tiles"
            android:textSize="24sp"
            android:textAlignment="center"
            android:paddingBottom="20dp"
            android:textColor="@color/white"
            android:fontFamily="@font/arcade"
            android:layout_gravity="center"
            />

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cat"
            android:paddingBottom="40dp">

        </pl.droidsonroids.gif.GifImageView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:id="@+id/play"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/arcade">
        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leaderboard"
            android:id="@+id/leaderboard"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/arcade">
        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:id="@+id/settings"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/arcade">
        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:id="@+id/exit"
            android:textColor="@color/red"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/arcade">

        </Button>

    </LinearLayout>
</LinearLayout>

