<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="10dp"
    android:background="@color/black">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:fontFamily="@font/arcade"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="20dp"
        android:layout_marginTop="50dp">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hs_text_1"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="@font/arcade"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="20dp"
        >

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hs_text_2"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:fontFamily="@font/arcade"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="20dp"
        >

    </TextView>

    <EditText
        android:id="@+id/hs_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textColor="@color/blue"
        android:fontFamily="@font/arcade"
        android:gravity="center"
        android:padding="20dp"
        android:maxLength="15"
        />

    <Button
        android:id="@+id/hs_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:fontFamily="@font/arcade"
        android:backgroundTint="@color/black"
        android:layout_margin="10dp"
        android:text="@string/submit">

    </Button>

</LinearLayout>