<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    android:padding="20dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        >

        <TextView
            android:id="@+id/settings_text_delete_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/select_music"
            android:textSize="16sp"
            />

        <Button
            android:id="@+id/settings_button_delete_all"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:backgroundTint="#e83333"
            android:text="BFG DIVISION"
            android:textColor="@android:color/white"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/settings_text_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/dark_theme"
            android:textSize="16sp"
            />

        <Button
            android:id="@+id/settings_button_theme"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:backgroundTint="@color/purple_200"
            android:textColor="@android:color/white"
            />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_margin="10dp"
        android:text="@string/back_to_main_menu"
        android:id="@+id/back_to_main_menu">

    </Button>


</LinearLayout>